--- a/Autonuoma/Views/Preke/Delete.cshtml
+++ b/Autonuoma/Views/Preke/Delete.cshtml
@@ -29,6 +29,9 @@
 			<dt>@Html.DisplayNameFor(m => m.ID)</dt>
 			<dd>@Html.DisplayFor(m => m.ID)</dd>
 
+            <dt>@Html.DisplayNameFor(m => m.Tipas)</dt>
+            <dd>@Html.DisplayFor(m => m.Tipas)</dd>
+
 			<dt>@Html.DisplayNameFor(m => m.Pavadinimas)</dt>
 			<dd>@Html.DisplayFor(m => m.Pavadinimas)</dd>
 
