--- a/Autonuoma/Views/Uzsakymas/Delete.cshtml
+++ b/Autonuoma/Views/Uzsakymas/Delete.cshtml
@@ -35,8 +35,8 @@
 			<dt>@Html.DisplayNameFor(m => m.Data)</dt>
 			<dd>@Html.DisplayFor(m => m.Data)</dd>
 
-			<dt>@Html.DisplayNameFor(m => m.Darbuotojas)</dt>
-			<dd>@Html.DisplayFor(m => m.Darbuotojas)</dd>
+			<dt>@Html.DisplayNameFor(m => m.darbutojas)</dt>
+			<dd>@Html.DisplayFor(m => m.darbutojas)</dd>
 
 			<dt>@Html.DisplayNameFor(m => m.Pirkejas)</dt>
 			<dd>@Html.DisplayFor(m => m.Pirkejas)</dd>
