--- a/Autonuoma/Views/Uzsakymas/Edit.cshtml
+++ b/Autonuoma/Views/Uzsakymas/Edit.cshtml
@@ -44,9 +44,9 @@
 		</div>
 
 		<div class="form-group">
-			@Html.LabelFor(m => m.Uzsak.FkDarbuotojas)
-			@Html.DropDownListFor(m => m.Uzsak.FkDarbuotojas, Model.Lists.Darbuotojai, (string)ViewData["none-chosen"])
-			@Html.ValidationMessageFor(m => m.Uzsak.FkDarbuotojas, "")
+			@Html.LabelFor(m => m.Uzsak.Fkdarbutojas)
+			@Html.DropDownListFor(m => m.Uzsak.Fkdarbutojas, Model.Lists.Darbutojai, (string)ViewData["none-chosen"])
+			@Html.ValidationMessageFor(m => m.Uzsak.Fkdarbutojas, "")
 		</div>
 
 		<div class="form-group">
