--- a/Autonuoma/Views/Uzsakymas/Index.cshtml
+++ b/Autonuoma/Views/Uzsakymas/Index.cshtml
@@ -26,7 +26,7 @@
 					@Html.DisplayNameFor(model => model.Data)
 				</th>
 				<th>
-					@Html.DisplayNameFor(model => model.Darbuotojas)
+					@Html.DisplayNameFor(model => model.darbutojas)
 				</th>
 				<th>
 					@Html.DisplayNameFor(model => model.Pirkejas)
@@ -47,7 +47,7 @@
 					@Html.DisplayFor(model => item.Data)
 				</th>
 				<th>
-					@Html.DisplayFor(model => item.Darbuotojas)
+					@Html.DisplayFor(model => item.darbutojas)
 				</th>
 				<th>
 					@Html.DisplayFor(model => item.Pirkejas)
