--- a/Autonuoma/Views/Darbutojas/Index.cshtml
+++ b/Autonuoma/Views/Darbutojas/Index.cshtml
@@ -62,7 +62,7 @@
 						@Html.DisplayFor(model => item.Pareigos)
 					</th>
 					<th>
-						@Html.DisplayNameFor(model => model.Asmens_Kodas)
+						@Html.DisplayFor(model => item.Asmens_Kodas)
 					</th>
 					<th>
 						@Html.DisplayFor(model => item.Parduotuve)
