--- a/Autonuoma/Views/Preke/Create.cshtml
+++ b/Autonuoma/Views/Preke/Create.cshtml
@@ -32,6 +32,12 @@
 		</div>
 
 		<div class="form-group">
+			@Html.LabelFor(m => m.Preke.Tipas)
+			@Html.EditorFor(m => m.Preke.Tipas)
+			@Html.ValidationMessageFor(m => m.Preke.Tipas, "")
+		</div>
+
+		<div class="form-group">
 			@Html.LabelFor(m => m.Preke.Kaina)
 			@Html.EditorFor(m => m.Preke.Kaina)
 			@Html.ValidationMessageFor(m => m.Preke.Kaina, "")
