--- a/Autonuoma/Views/UzsakymasF2/Create.cshtml
+++ b/Autonuoma/Views/UzsakymasF2/Create.cshtml
@@ -25,7 +25,7 @@
 	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 	@* add hidden form fields for non-visible properties, otherwise they will get lost in code that handles button presses *@
-	@Html.HiddenFor(m => m.Uzsakymas.ID)
+	@Html.HiddenFor(m => m.Uzsakymas.Id)
 
 	<fieldset>
 		<legend class="text-center">Informacija</legend>
@@ -49,9 +49,9 @@
 		</div>
 
 		<div class="form-group">
-			@Html.LabelFor(m => m.Uzsakymas.FkDarbuotojas)
-			@Html.DropDownListFor(m => m.Uzsakymas.FkDarbuotojas, Model.Lists.Darbuotojai, (string)ViewData["none-chosen"])
-			@Html.ValidationMessageFor(m => m.Uzsakymas.FkDarbuotojas, "")
+			@Html.LabelFor(m => m.Uzsakymas.FkDarbutojas)
+			@Html.DropDownListFor(m => m.Uzsakymas.FkDarbutojas, Model.Lists.Darbutojai, (string)ViewData["none-chosen"])
+			@Html.ValidationMessageFor(m => m.Uzsakymas.FkDarbutojas, "")
 		</div>
 	</fieldset>
 
